welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:4: error: ';' expected but ')' found.
while (2*nbBiscuit)!=nbCaseOrange){
                                 ^